small addition to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
     <title>Hello Internet</title>
 </head>
 <body>
-    <h1>Hello Internet</h1>
+    <h1>Hello Internet! You all are welcome here.</h1>
 </body>
 </html>
